Added showArtist alert & artistCard Footer

--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -14,5 +14,10 @@
         <h6 class="card-text"><a href="{{ artist.url }}">Website</a></h6>
         </div>
     </div>
+    <div class="card-footer">
+            <button class="btn btn-primary float-right" (click)="showArtist()">
+              See Details
+            </button>
+          </div>
     </div>
 </div>
