Added EventEmitter & alert for album-card

--- a/src/app/artists/artist-list/artist-list.component.html
+++ b/src/app/artists/artist-list/artist-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="card-deck">
-      <app-artist-card [artist]="artistsArray[0]"></app-artist-card>
-      <app-artist-card [artist]="artistsArray[1]"></app-artist-card>
-      <app-artist-card [artist]="artistsArray[2]"></app-artist-card>
+      <app-artist-card [artist]="artistsArray[0]" (artistClicked)="parentFunctionHandler($event)"></app-artist-card>
+      <app-artist-card [artist]="artistsArray[1]" (artistClicked)="parentFunctionHandler($event)"></app-artist-card>
+      <app-artist-card [artist]="artistsArray[2]" (artistClicked)="parentFunctionHandler($event)"></app-artist-card>
     </div>
 </div>
