Added routerLink to Album-Card

--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="card-footer">
-            <button class="btn btn-primary float-right" (click)="showArtist()">
+            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]">
               See Details
             </button>
           </div>
