--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
               <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/welcome']" routerLinkActive="router-link-active">Home</a></li>
               <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/albums']" routerLinkActive="router-link-active">View Artists</a></li>
+                <a class="nav-link" [routerLink]="['/artists']" routerLinkActive="router-link-active">View Artists</a></li>
             </ul>
           </div>
         </div>
