artist detail img alt update

--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row my-3">
-    <img *ngIf="artist" class="float-right img-fluid img-thumbnail"style=" max-width: 30%" src="assets/img/{{ artist.id }}.jpg" alt="{{ artist?.artistName }}" />
+    <img *ngIf="artist" class="float-right img-fluid img-thumbnail"style=" max-width: 30%" src="assets/img/{{ artist.id }}.jpg" alt="{{ artist?.name }}" />
 
     <ul style="list-style: none;">
       <li>
