--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -7,7 +7,7 @@
         style="border: 1px solid grey"
     />
     <div class="card-body">
-      <h5 class="card-title">{{ artist.name }}</h5>
+      <h5 class="card-title" style="font-weight: bold; text-align: center; text-decoration-line: underline;">{{ artist.name }}</h5>
       <div class="scrollable">
         <h6 class="card-title">Hometown: <em>{{ artist.hometown }}</em></h6>
         <h6 class="card-text">Genre: <em>{{ artist.genre }}</em></h6>
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="card-footer">
-            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]">
+            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 200px; margin: 0 10% 0% 10%">
               See Details
             </button>
           </div>
