--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,6 @@
 <div class="jumbotron text-center">
-    <h1 class="display-4">Welcome to {{ title }}!</h1>
+    <h1 class="display-4" style="color: #0069D9;">Welcome to {{ title }}</h1>
+    <h2 class="display-6"><em>The Internet's Home for the best Electronic Music</em></h2>
     <button
       type="button"
       routerLink="/artists"
