--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,6 +1,9 @@
 <div class="jumbotron text-center">
     <h1 class="display-4" style="color: #0069D9;">Welcome to {{ title }}</h1>
+    <br>
     <h2 class="display-6"><em>The Internet's Home for the best Electronic Music</em></h2>
+    <h4 class="display-10" style="color: #0069D9;">An Angular Project by Gordon Allen</h4>
+    
     <button
       type="button"
       routerLink="/artists"
