Edited NavBar txt, adjusted Welcome comp. btn size

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,6 +8,7 @@
       type="button"
       routerLink="/artists"
       class="btn btn-primary text-center mt-3 mx-auto"
+      style="width: 225px; font-size: 28px; border-radius: 10px;"
     >
       View Artists
     </button>
