--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="card-footer">
-            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 200px; margin: 0 10% 0% 10%">
+            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 190px; margin: 0 10% 0% 10%; font-size: 18px; border-radius: 8px;">
               See Details
             </button>
           </div>
