--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -4,13 +4,14 @@
 
     <ul style="list-style: none;">
       <li>
-        <h1>{{ artist?.name }}</h1>
+        <a style="color:#0069D9" href="{{ artist?.url }}"><h1 style="text-decoration-line: underline;">{{ artist?.name }}</h1></a>
       </li>
       <li>
         <a href="{{ artist?.facebookUrl }}"><img style="width: 40px; height:40px; margin-right: 5px;" src="assets/img/facebook_icon.png"></a>
+        <a href="{{ artist?.instagramUrl }}"><img style="width: 42px; height:42px; margin-right: 5px;" src="assets/img/instagram_icon.png"></a>
         <a href="{{ artist?.twitterUrl }}"><img style="width: 40px; height:40px; margin-right: 5px;" src="assets/img/twitter_icon.png"></a>
         <a href="{{ artist?.spotifyUrl }}"><img style="width: 38px; height:38px; margin-right: 5px;" src="assets/img/spotify_icon_small.png"></a>
-        <a href="{{ artist?.appleMusicUrl }}"><img style="width: 40px; height:40px; margin-right: 5px;" src="assets/img/applemusic_logo_small.png"></a>
+        <a href="{{ artist?.appleMusicUrl }}"><img style="width: 40px; height:40px; margin-right: 5px;" src="assets/img/applemusic_icon_small.png"></a>
         <a href="{{ artist?.youtubeUrl }}"><img style="width: 45px; height:32px; margin-right: 5px;" src="assets/img/youtube_icon_small.png"></a>
       </li>
       <li style="margin-top: 10px;"><h6><a href="{{ artist?.url }}">{{ artist?.name }}'s Website</a></h6></li>
