--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -24,7 +24,7 @@
     <h4><span style="text-decoration-line: underline;">Best Album</span>: <em>{{ album?.title }}</em> ({{ album?.releaseYear }})</h4>
     <a href="{{ album?.albumSpotifyUrl }}"><img style="width: 110px; height: 33px; margin-left: 5px;" src="assets/img/spotify_icon.png"></a><a href="{{ album?.albumAppleMusicUrl }}"><img style="width: 100px; height: 25px; margin-left: 10px;" src="assets/img/applemusic_icon.png"></a>
     
-    <table class="table table-striped">
+    <table class="table table-striped" style="border: 2px solid #0069D9;">
       <caption><em>{{ album?.title }}</em> by {{ album?.artist }} ({{ album?.releaseYear }} - {{ album?.trackCount }} Tracks)</caption>
       <thead class="thead-light">
         <tr>
