--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img class="nav-item" src="assets/electronica.png" style="height:40px; width:40px; margin-right: .15%;"/>
+        <img class="nav-item" src="assets/img/electronica.png" style="height:40px; width:40px; margin-right: .15%;"/>
         <a class="navbar-brand" style="color:#0069D9" [routerLink]="['/welcome']">{{title}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
