--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -10,8 +10,8 @@
       <h5 class="card-title" style="font-weight: bold; text-align: center; text-decoration-line: underline;">{{ artist.name }}</h5>
       <h6 class="card-text" style="font-size: 18px; text-align: center;"><a href="{{ artist.url }}">Website</a></h6>
       <div class="scrollable">
-        <h6 class="card-title">Home-Country: <em>{{ artist.homecountry }}</em></h6>
-        <h6 class="card-text">Genre: <em>{{ artist.genre }}</em></h6>
+        <h6 class="card-title"><span style="font-weight: 625; text-decoration-line: underline;">Home-Country</span>: <em>{{ artist.homecountry }}</em></h6>
+        <h6 class="card-text"><span style="font-weight: 625; text-decoration-line: underline;">Genre</span>: <em>{{ artist.genre }}</em></h6>
         </div>
     </div>
     <div class="card-footer">
