--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -8,23 +8,23 @@
         
       </li>
       <li>
-        <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/facebook_icon.png"></a>
-        <a href="{{ artist.instagramUrl }}" target="_blank" rel="noopener"><img style="width: 42px; height: 42px; margin-right: 5px;" src="assets/img/instagram_icon.png"></a>
-        <a href="{{ artist.twitterUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/twitter_icon.png"></a>
-        <a href="{{ artist.youtubeUrl }}" target="_blank" rel="noopener"><img style="width: 37.5px; height: 37.5px; margin-right: 5px;" src="assets/img/youtube_icon_small.png"></a>
-        <a href="{{ artist.spotifyUrl }}" target="_blank" rel="noopener"><img style="width: 38px; height:3 8px; margin-right: 5px;" src="assets/img/spotify_icon_small.png"></a>
-        <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 1px;" src="assets/img/applemusic_icon_small.png"></a>
-        <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img style="width: 45px; height: 45px; margin-right: 5px;" src="assets/img/soundcloud_icon.png"></a>
+        <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/facebook_icon.png" alt="Facebook"></a>
+        <a href="{{ artist.instagramUrl }}" target="_blank" rel="noopener"><img style="width: 42px; height: 42px; margin-right: 5px;" src="assets/img/instagram_icon.png" alt="Instagram"></a>
+        <a href="{{ artist.twitterUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/twitter_icon.png" alt="Twitter"></a>
+        <a href="{{ artist.youtubeUrl }}" target="_blank" rel="noopener"><img style="width: 37.5px; height: 37.5px; margin-right: 5px;" src="assets/img/youtube_icon_small.png" alt="Youtube"></a>
+        <a href="{{ artist.spotifyUrl }}" target="_blank" rel="noopener"><img style="width: 38px; height:3 8px; margin-right: 5px;" src="assets/img/spotify_icon_small.png" alt="Spotify"></a>
+        <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 1px;" src="assets/img/applemusic_icon_small.png" alt="Apple Music"></a>
+        <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img style="width: 45px; height: 45px; margin-right: 5px;" src="assets/img/soundcloud_icon.png" alt="Soundcloud"></a>
       </li>
       <li style="margin-top: 10px; color:#0069D9;"><h6><a href="{{ artist.url }}" target="_blank" rel="noopener">{{ artist.name }}'s Website</a></h6></li>
       <li><h6><span style="font-weight: 575; text-decoration-line: underline;">Home-Country</span>: <em>{{ artist.homecountry }}</em></h6></li>
       <li><h6><span style="font-weight: 575; text-decoration-line: underline;">Genre</span>: <em>{{ artist.genre }}</em></h6></li>
-      <li style="font-size: 18px; margin-top: 15px; font-weight: 650;"><img style="width: 45px; height:45px;" src="assets/img/electronica.png">Electronica's Curated Track of Choice: <a style="color:#0069D9" href="{{ artist.curatedTrackUrl }} " target="_blank" rel="noopener">{{ artist.curatedTrack }}</a><a href="{{ artist.curatedTrackUrl }}" target="_blank" rel="noopener"><img style="width: 100px; height: 20px; margin-left: 5px; margin-top: -4px;" src="assets/img/youtube_icon.png"></a></li>
+      <li style="font-size: 18px; margin-top: 15px; font-weight: 650;"><img style="width: 45px; height:45px;" src="assets/img/electronica.png" alt="Electronica">Electronica's Curated Track of Choice: <a style="color:#0069D9" href="{{ artist.curatedTrackUrl }} " target="_blank" rel="noopener">{{ artist.curatedTrack }}</a><a href="{{ artist.curatedTrackUrl }}" target="_blank" rel="noopener"><img style="width: 100px; height: 20px; margin-left: 5px; margin-top: -4px;" src="assets/img/youtube_icon.png" alt="Youtube"></a></li>
     </ul>
   </div>
   <div class="row" style="margin-top: 10px;"   *ngFor="let album of artist.album">
     <h4><span style="text-decoration-line: underline;">Best Album/EP</span>: <em>{{ album.title }}</em> ({{ album.releaseYear }})</h4>
-    <a href="{{ album.albumSpotifyUrl }}" target="_blank" rel="noopener"><img style="width: 110px; height: 33px; margin-left: 5px;" src="assets/img/spotify_icon.png"></a><a href="{{ album.albumAppleMusicUrl }}" target="_blank" rel="noopener"><img style="width: 100px; height: 25px; margin-left: 10px;" src="assets/img/applemusic_icon.png"></a>
+    <a href="{{ album.albumSpotifyUrl }}" target="_blank" rel="noopener"><img style="width: 110px; height: 33px; margin-left: 5px;" src="assets/img/spotify_icon.png" alt="Spotify"></a><a href="{{ album.albumAppleMusicUrl }}" target="_blank" rel="noopener"><img style="width: 100px; height: 25px; margin-left: 10px;" src="assets/img/applemusic_icon.png" alt="Apple Music"></a>
     
     <table class="table table-striped" style="border: 4px solid #0069D9;">
       <caption><em>{{ album.title }}</em> by {{ album.artist }} ({{ album.releaseYear }} - {{ album.trackCount }} Tracks)</caption>
@@ -41,7 +41,7 @@
           <th scope="row">{{ tracks.trackNumber }}</th>
           <td><em style="font-weight: 500;">{{ tracks.trackTitle }}</em></td>
           <td style="font-weight: 500;">{{ tracks.trackLength }}</td>
-          <td><a href="{{ tracks.trackUrl }}" target="_blank" rel="noopener"><img style="width: 47.5px; height:27.5px;" src="assets/img/youtube_icon_playtrack.png"></a></td>
+          <td><a href="{{ tracks.trackUrl }}" target="_blank" rel="noopener"><img style="width: 47.5px; height:27.5px;" src="assets/img/youtube_icon_playtrack.png" alt="Youtube"></a></td>
         </tr>
       </tbody>
     </table>
