Refactored artist-detail profile badges styling

--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -5,16 +5,15 @@
     <ul style="list-style: none;">
       <li>
         <a style="color:#0069D9;" href="{{ artist.url }}" target="_blank" rel="noopener"><h1 style="text-decoration-line: underline;">{{ artist.name }}</h1></a>
-        
       </li>
       <li>
-        <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/facebook_icon.png" alt="Facebook"></a>
-        <a href="{{ artist.instagramUrl }}" target="_blank" rel="noopener"><img style="width: 42px; height: 42px; margin-right: 5px;" src="assets/img/instagram_icon.png" alt="Instagram"></a>
-        <a href="{{ artist.twitterUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 5px;" src="assets/img/twitter_icon.png" alt="Twitter"></a>
-        <a href="{{ artist.youtubeUrl }}" target="_blank" rel="noopener"><img style="width: 37.5px; height: 37.5px; margin-right: 5px;" src="assets/img/youtube_icon_small.png" alt="Youtube"></a>
-        <a href="{{ artist.spotifyUrl }}" target="_blank" rel="noopener"><img style="width: 38px; height:3 8px; margin-right: 5px;" src="assets/img/spotify_icon_small.png" alt="Spotify"></a>
-        <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img style="width: 40px; height: 40px; margin-right: 1px;" src="assets/img/applemusic_icon_small.png" alt="Apple Music"></a>
-        <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img style="width: 45px; height: 45px; margin-right: 5px;" src="assets/img/soundcloud_icon.png" alt="Soundcloud"></a>
+        <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img class="facebook_badge" src="assets/img/facebook_icon.png" alt="Facebook"></a>
+        <a href="{{ artist.instagramUrl }}" target="_blank" rel="noopener"><img class="instagram_badge" src="assets/img/instagram_icon.png" alt="Instagram"></a>
+        <a href="{{ artist.twitterUrl }}" target="_blank" rel="noopener"><img class="twitter_badge" src="assets/img/twitter_icon.png" alt="Twitter"></a>
+        <a href="{{ artist.youtubeUrl }}" target="_blank" rel="noopener"><img class="youtube_badge" src="assets/img/youtube_icon_small.png" alt="Youtube"></a>
+        <a href="{{ artist.spotifyUrl }}" target="_blank" rel="noopener"><img class="spotify_badge" src="assets/img/spotify_icon_small.png" alt="Spotify"></a>
+        <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img class="applemusic_badge" src="assets/img/applemusic_icon_small.png" alt="Apple Music"></a>
+        <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img class="soundcloud_badge" src="assets/img/soundcloud_icon.png" alt="Soundcloud"></a>
       </li>
       <li style="margin-top: 10px; color:#0069D9;"><h6><a href="{{ artist.url }}" target="_blank" rel="noopener">{{ artist.name }}'s Website</a></h6></li>
       <li><h6><span style="font-weight: 575; text-decoration-line: underline;">Home-Country</span>: <em>{{ artist.homecountry }}</em></h6></li>
