--- a/src/app/artists/artist-details/artist-details.component.css
+++ b/src/app/artists/artist-details/artist-details.component.css
@@ -72,7 +72,18 @@
     margin-top: -4px;    
 }
 
+.album_title {
+    text-decoration-line: underline;
+}
 
+.album_spotify_icon{
+    width: 110px;
+    height: 33px;
+    margin-left: 5px;
+}
 
-
-
+.album_applemusic_icon{
+    width: 100px;
+    height: 25px;
+    margin-left: 10px;
+}
