--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -4,7 +4,7 @@
 
     <ul style="list-style: none;">
       <li>
-        <a class="e_blue_text" href="{{ artist.url }}" target="_blank" rel="noopener"><h1 style="text-decoration-line: underline;">{{ artist.name }}</h1></a>
+        <a class="e_blue_text" href="{{ artist.url }}" target="_blank" rel="noopener"><h1 class="artist_name_title">{{ artist.name }}</h1></a>
       </li>
       <li>
         <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img class="facebook_badge" src="assets/img/facebook_icon.png" alt="Facebook"></a>
@@ -28,7 +28,7 @@
     <table class="table table-striped" style="border: 4px solid #0069D9;">
       <caption><em>{{ album.title }}</em> by {{ album.artist }} ({{ album.releaseYear }} - {{ album.trackCount }} Tracks)</caption>
       <thead class="thead-light" style="border: 4px solid #0069D9;">
-        <tr style="border: 2px solid #0069D9;">
+        <tr class="album_table_row">
           <th scope="col" style="color:#0069D9; font-size: 18px;">Track #</th>
           <th scope="col" style="color:#0069D9; font-size: 18px;">Title</th>
           <th scope="col" style="color:#0069D9; font-size: 18px;">Length</th>
@@ -36,11 +36,11 @@
         </tr>
       </thead>
       <tbody *ngFor="let album of artist.album">
-        <tr style="border: 2px solid #0069D9;" *ngFor="let tracks of album.tracks">
+        <tr class="album_table_row" *ngFor="let tracks of album.tracks">
           <th scope="row">{{ tracks.trackNumber }}</th>
-          <td><em style="font-weight: 500;">{{ tracks.trackTitle }}</em></td>
-          <td style="font-weight: 500;">{{ tracks.trackLength }}</td>
-          <td><a href="{{ tracks.trackUrl }}" target="_blank" rel="noopener"><img style="width: 47.5px; height:27.5px;" src="assets/img/youtube_icon_playtrack.png" alt="Youtube"></a></td>
+          <td><em class="album_track_text">{{ tracks.trackTitle }}</em></td>
+          <td class="album_track_text">{{ tracks.trackLength }}</td>
+          <td><a href="{{ tracks.trackUrl }}" target="_blank" rel="noopener"><img class="album_track_youtube_icon" src="assets/img/youtube_icon_playtrack.png" alt="Youtube"></a></td>
         </tr>
       </tbody>
     </table>
