--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -3,8 +3,7 @@
     <img
         class="card-img-top cover"
         src="assets/img/{{ artist.id }}.jpg"
-        alt=""
-        style="border: 1px solid grey"
+        alt="ArtistID: {{ artist.id }}"
     />
     <div class="card-body">
       <h5 class="card-title" style="font-weight: bold; text-align: center; text-decoration-line: underline;">{{ artist.name }}</h5>
